hphp/hack/test/ifc/check/governed_basic.php.exp
=== IFC analysis results for governed_basic.php
File "governed_basic.php", line 49, characters 3-14:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "governed_basic.php", line 9, characters 14-21:
  Leakage sink
File "governed_basic.php", line 49, characters 3-14:
Context-implicit policy leaks into `PUBLIC` via `C`. (Typing[4380])
  File "governed_basic.php", line 9, characters 14-21:
  Leakage sink
File "governed_basic.php", line 38, characters 3-13:
Context-implicit policy leaks into `A` via `pc`. (Typing[4380])
  File "governed_basic.php", line 6, characters 14-19:
  Leakage sink
File "governed_basic.php", line 38, characters 3-13:
Context-implicit policy leaks into `A` via `C`. (Typing[4380])
  File "governed_basic.php", line 6, characters 14-19:
  Leakage sink
File "governed_basic.php", line 38, characters 3-13:
Context-implicit policy leaks into `A` via `$x`. (Typing[4380])
  File "governed_basic.php", line 6, characters 14-19:
  Leakage sink
File "governed_basic.php", line 43, characters 3-15:
Context-implicit policy leaks into `PUBLIC` via `pc`. (Typing[4380])
  File "governed_basic.php", line 9, characters 14-21:
  Leakage sink
File "governed_basic.php", line 43, characters 3-15:
Context-implicit policy leaks into `PUBLIC` via `C`. (Typing[4380])
  File "governed_basic.php", line 9, characters 14-21:
  Leakage sink
File "governed_basic.php", line 43, characters 3-15:
Context-implicit policy leaks into `PUBLIC` via `$x`. (Typing[4380])
  File "governed_basic.php", line 9, characters 14-21:
  Leakage sink
